mobius-kube-12.1.0/nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobiusingress
  namespace: <NAMESPACE>
            
spec:
  ingressClassName: nginx
  rules:
 
  - host: <HOSTNAME>
    http:
      paths:
      - backend:
          service:
            name: mobiusview
            port:
              number: 80
        path: /mobius
        pathType: Prefix
  tls:
    - hosts:
      - <HOSTNAME>
      secretName: nginx-cert
